# ChangeLog for app-crypt/md5deep
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.64 2012/03/18 15:11:26 armin76 Exp $

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> md5deep-3.4.ebuild,
  md5deep-3.7.ebuild, md5deep-3.9.ebuild, md5deep-3.9.1.ebuild,
  md5deep-4.0.0.ebuild, md5deep-4.0.1.ebuild:
  Drop sparc keywords

  01 Feb 2012; Brent Baude <ranger@gentoo.org> md5deep-3.9.1.ebuild:
  Marking md5deep-3.9.1 ppc for bug 396777

*md5deep-4.0.1 (29 Jan 2012)

  29 Jan 2012; Tristan Heaven <tristan@gentoo.org> +md5deep-4.0.1.ebuild:
  Version bump

  15 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> md5deep-3.9.1.ebuild:
  x86 stable wrt bug #396777

*md5deep-4.0.0 (06 Jan 2012)

  06 Jan 2012; Tristan Heaven <tristan@gentoo.org> +md5deep-4.0.0.ebuild:
  Version bump, bug #397663

  04 Jan 2012; Agostino Sarubbo <ago@gentoo.org> md5deep-3.9.1.ebuild:
  Stable for AMD64, wrt bug #396777

  17 Nov 2011; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Change developer's email

*md5deep-3.9.1 (08 Jun 2011)

  08 Jun 2011; Tristan Heaven <nyhm@gentoo.org> +md5deep-3.9.1.ebuild:
  Version bump

*md5deep-3.9 (26 Apr 2011)

  26 Apr 2011; Tristan Heaven <nyhm@gentoo.org> +md5deep-3.9.ebuild:
  Version bump, bug #364765 by Tim Harder

*md5deep-3.7 (13 Feb 2011)

  13 Feb 2011; Christian Faulhammer <fauli@gentoo.org> +md5deep-3.7.ebuild:
  version bump for bug 351511 by Jesse Adelman <jesse AT boldandbusted DOT
  com>

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> md5deep-3.4.ebuild:
  Transfer Prefix keywords

  09 Dec 2009; nixnut <nixnut@gentoo.org> md5deep-3.4.ebuild:
  ppc stable #293994

  25 Nov 2009; Tiago Cunha <tcunha@gentoo.org> md5deep-3.4.ebuild:
  stable sparc, bug 293994

  23 Nov 2009; Markus Meier <maekke@gentoo.org> md5deep-3.4.ebuild:
  amd64/x86 stable, bug #293994

*md5deep-3.4 (10 Jun 2009)
